# VectorHUD

./: .gitignore  CLAUDE.md  Gemini.md  README.md  package-lock.json
.github/workflows/: build-test.yml  pr-review.yml
.husky/: pre-commit
VectorHUD/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
VectorHUD/src/: App.css  App.tsx  main.tsx  types.ts
VectorHUD/src-tauri/: Cargo.toml  download-ffmpeg.ps1  tauri.conf.json
VectorHUD/src-tauri/capabilities/: default.json
VectorHUD/src-tauri/src/: bin_pdh_test.rs  gpu_test.rs  lib.rs  main.rs
VectorHUD/src-tauri/src/commands/: api.rs  telemetry.rs
VectorHUD/src-tauri/src/core/: audio_capture.rs  audio_mixer.rs  auth.rs  capture.rs  ffmpeg_manager.rs  media_control.rs  metrics.rs  mod.rs  record.rs  voice_recorder.rs
VectorHUD/src-tauri/windows-record/: .cargo_vcs_info.json  Cargo.toml
VectorHUD/src-tauri/windows-record/examples/: basic_recording.rs  replay_buffer.rs  select_audio_device.rs  select_video_encoder.rs
VectorHUD/src-tauri/windows-record/src/: lib.rs
VectorHUD/src-tauri/windows-record/src/capture/: audio.rs  dxgi.rs  microphone.rs  mod.rs  video.rs  window.rs
VectorHUD/src-tauri/windows-record/src/device/: audio.rs  mod.rs  video.rs
VectorHUD/src-tauri/windows-record/src/processing/: audio.rs  media.rs  mod.rs  video.rs
VectorHUD/src-tauri/windows-record/src/recorder/: config.rs  inner.rs  mod.rs
VectorHUD/src-tauri/windows-record/src/types/: mod.rs  safe_wrapper.rs
VectorHUD/src/components/: Dock.tsx  DockItem.tsx  ErrorBoundary.tsx  HotkeyInput.tsx  RecordingStatusBar.tsx  SettingsModal.tsx  TimerStatusBar.tsx  WidgetContainer.tsx
VectorHUD/src/components/widgets/: AudioHubWidget.tsx  DummyWidget.tsx  HardwareWidget.tsx  MediaCaptureWidget.tsx  NotionCaptureWidget.tsx  OpenRouterWidget.tsx  TimerWidget.tsx
VectorHUD/src/config/: constants.ts
VectorHUD/src/store/: audioStore.ts  hardwareStore.test.ts  hardwareStore.ts  notionStore.ts  openRouterStore.ts  recordingStore.ts  settingsStore.test.ts  settingsStore.ts  shellStore.ts  timerStore.ts  toastStore.ts  widgetStore.test.ts  widgetStore.ts
VectorHUD/src/utils/: aiActions.test.ts  aiActions.ts  db.ts  logger.ts  store.ts
VectorHUD/versions/1.0.0/: latest.json
VectorHUD/versions/1.1.0/: latest.json  release-notes.md
VectorHUD/versions/1.1.1/: latest.json  release-notes.md
VectorHUD/versions/1.1.2/: latest.json  release-notes.md
VectorHUD/versions/1.2.0/: latest.json  release-notes.md
context/: Decisions.md  FutureImplementations.md  ai-workflow-rules.md  architecture.md  code-standards.md  data-flow-and-decisions.md  data-flow.md  database-schema.md  progress-tracker.md  project-overview.md  ui-context.md
docs/: CODE_REVIEW_COMPREHENSIVE_2026-06-13.md  CODE_REVIEW_SECOND_SWEEP_2026-06-13.md  ai_actions.md  codebase_guide.md  journey_and_lessons.md
docs/code_reviews/: CODE_REVIEW.md  CODE_REVIEW_V2.md  CODE_REVIEW_V3.md  CODE_REVIEW_V4.md  CODE_REVIEW_V5.md
