[package]
name = "vectorhud"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vectorhud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vectorhud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.3"
xcap = { version = "0.9.6", features = ["image"] }
windows-record = { path = "windows-record" }


windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_Devices_FunctionDiscovery", "Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams", "Win32_System_ProcessStatus", "Win32_Graphics_Dxgi", "Win32_System_Performance", "Win32_Graphics_Gdi", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_Input_KeyboardAndMouse"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
aes-gcm = "0.10.3"
machine-uid = "0.6.0"
rand = "0.10.1"
base64 = "0.22.1"
sha2 = "0.11.0"
dirs = "6.0.0"
image = "0.25.10"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2"
cpal = "0.18.1"
bytemuck = "1.25.0"
flume = "0.12.0"
time = "=0.3.36"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
